--- a/1 - Primeira imagem/dockerfile
+++ b/1 - Primeira imagem/dockerfile
@@ -1,5 +1,8 @@
 FROM node:14
 WORKDIR /docker-app
 COPY . .
+ARG PORT_BUILD=3000
+ENV PORT=$PORT_BUILD
+EXPOSE $PORT_BUILD
 RUN npm install
 ENTRYPOINT npm start
